Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 145,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:36:49.271619Z",
-     "start_time": "2019-04-15T12:36:49.227502Z"
+     "end_time": "2019-04-15T12:37:27.458228Z",
+     "start_time": "2019-04-15T12:37:26.476980Z"
     },
     "code_folding": [
      92,
@@ -252,17 +252,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsads\n",
-      "[[-0.981]\n",
-      " [ 0.091]\n",
-      " [ 0.174]]\n"
+      "-1\n",
+      "-2\n",
+      "[[0.601]\n",
+      " [0.462]\n",
+      " [0.652]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:90: RuntimeWarning:\n",
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:92: RuntimeWarning:\n",
       "\n",
       "invalid value encountered in true_divide\n",
       "\n"
@@ -279,11 +280,14 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
-    "        print('dsads')\n",
+    "        input('-1')\n",
     "        if outc == 1:\n",
+    "            input('-2')\n",
     "            self.w = self.norm(np.random.normal(size=(inc,outc)))\n",
     "        else:\n",
+    "            input('-3')\n",
     "            self.w = self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
+    "            \n",
     "        self.a =self.stand(np.random.normal(size=(outc)))\n",
     "        self.b =self.stand(np.random.normal(size=(outc)))\n",
     "        self.c =self.stand(np.random.normal(size=(outc)))\n",
