Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -455,10 +455,9 @@
     "learning_rate = 0.0008 ; beta1=0.9; beta2=0.9999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3)\n",
-    "l2 = PCA_layer(3,3)\n",
-    "l3 = PCA_layer(3,1)\n",
+    "l2 = PCA_layer(3,2)\n",
+    "l3 = PCA_layer(2,3)\n",
     "l4 = PCA_layer(3,1)\n",
-    "\n",
     "\n",
     "mini_batch_size    = 20\n",
     "training_iteration = 100\n",
@@ -472,6 +471,8 @@
     "        layer1,layer1_var = l1.feed_non(current_batch)\n",
     "        layer2,layer2_var = l2.feed_non(layer1)\n",
     "        layer3,layer3_var = l3.feed_linear(layer2)\n",
+    "        layer4,layer4_var = l4.feed_linear(layer2)\n",
+    "        \n",
     "        sys.stdout.write(\"Iter: \" + str(iter) + \" \" + str(layer1_var.mean() + layer2_var.mean() + layer3_var.mean()) + '\\r'); sys.stdout.flush()\n",
     "        \n",
     "        grad3 = l3.back_linear()\n",
