Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9744,7 +9744,9 @@
     "l1   = PCA_layer(2,3)\n",
     "l1bn = batch_norm()\n",
     "l2   = PCA_layer(3,3)\n",
+    "l2bn = batch_norm()\n",
     "l3   = PCA_layer(3,3)\n",
+    "l3bn = batch_norm()\n",
     "l4   = PCA_layer(3,1)\n",
     "\n",
     "mini_batch_size    = 100\n",
@@ -9757,6 +9759,7 @@
     "        current_batch = copyX[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        \n",
     "        layer1,layer1_var = l1.feed_non(current_batch)\n",
+    "        layer1b\n",
     "        layer2,layer2_var = l2.feed_non(layer1)\n",
     "        layer3,layer3_var = l3.feed_non(layer2)\n",
     "        layer4,layer4_var = l4.feed_linear(layer3)\n",
