Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9769,6 +9769,7 @@
     "        sys.stdout.write(\"Iter: \" + str(iter) + \" \" + str(layer1_var.mean() + layer2_var.mean() + layer3_var.mean()+ layer4_var.mean()) + '\\r'); sys.stdout.flush()\n",
     "        \n",
     "        grad4 = l4.back_linear()\n",
+    "        grad4bn\n",
     "        grad3 = l3.back_non(grad4,sign=-1)\n",
     "        grad2 = l2.back_non(grad3,sign=-1)\n",
     "        grad1 = l1.back_non(grad2,sign=-1)\n",
