--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9736,8 +9736,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-04-15T13:12:05.783Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter: 9 169.35441001951662\r"
+     ]
+    }
+   ],
    "source": [
     "learning_rate = 0.001 ; beta1=0.9; beta2=0.9999; adam_e = 1e-8 \n",
     "\n",
@@ -9771,17 +9783,18 @@
     "        grad4   = l4.back_linear()\n",
     "        grad3bn = l3bn.back(grad4)\n",
     "        grad3   = l3.back_non(grad4,sign=-1)\n",
-    "        \n",
     "        grad2bn = l2bn.back(grad3)\n",
     "        grad2   = l2.back_non(grad2bn,sign=-1)\n",
-    "        \n",
     "        grad1bn = l1bn.back(grad2)\n",
     "        grad1   = l1.back_non(grad1bn,sign=-1)\n",
-    "   \n",
+    "\n",
     "layer1,layer1_var = l1.feed_non(X)\n",
-    "layer2,layer2_var = l2.feed_non(layer1)\n",
-    "layer3,layer3_var = l3.feed_non(layer2)\n",
-    "layer4,layer4_var = l4.feed_linear(layer3)\n",
+    "layer1bn = l1bn.feed(layer1)\n",
+    "layer2,layer2_var = l2.feed_non(layer1bn)\n",
+    "layer2bn = l2bn.feed(layer2)\n",
+    "layer3,layer3_var = l3.feed_non(layer2bn)\n",
+    "layer3bn = l3bn.feed(layer3)\n",
+    "layer4,layer4_var = l4.feed_linear(layer3bn)\n",
     "\n",
     "show_1D(layer4[:,None])"
    ]
