Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9793,7 +9793,7 @@
     "        \n",
     "        grad4   = l4.back_linear()\n",
     "        grad3bn = l3bn.back(grad4)\n",
-    "        grad3   = l3.back_non(grad4,sign=-1)\n",
+    "        grad3   = l3.back_non(grad3bn,sign=-1)\n",
     "        grad2bn = l2bn.back(grad3)\n",
     "        grad2   = l2.back_non(grad2bn,sign=-1)\n",
     "        grad1bn = l1bn.back(grad2)\n",
