Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9746,11 +9746,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 275,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-15T17:19:58.550291Z",
+     "start_time": "2019-04-15T17:19:58.544338Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000,)"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_new = X[:,0]**2 "
+    "X_new = X[:,0]**2 + X[:,1]**2\n",
+    "X_new = X_new[:,]\n",
+    "X_new.shape"
    ]
   },
   {
