Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9767,7 +9767,8 @@
    ],
    "source": [
     "X_new = X[:,0]**2 + X[:,1]**2\n",
-    "X_new = X_new[:,]\n",
+    "X_new = X_new[:,None]\n",
+    "XX_new = np.concatenate([X,X_new],0)\n",
     "X_new.shape"
    ]
   },
