Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -9746,21 +9746,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 277,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T17:19:58.550291Z",
-     "start_time": "2019-04-15T17:19:58.544338Z"
+     "end_time": "2019-04-15T17:20:33.787940Z",
+     "start_time": "2019-04-15T17:20:33.780996Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000,)"
+       "(1000, 3)"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9768,8 +9768,8 @@
    "source": [
     "X_new = X[:,0]**2 + X[:,1]**2\n",
     "X_new = X_new[:,None]\n",
-    "XX_new = np.concatenate([X,X_new],0)\n",
-    "X_new.shape"
+    "XX_new = np.concatenate([X,X_new],1)\n",
+    "XX_new.shape\n"
    ]
   },
   {
