--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -71,14 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:47:36.843079Z",
-     "start_time": "2019-05-03T18:47:36.805894Z"
+     "end_time": "2019-05-03T18:48:09.041484Z",
+     "start_time": "2019-05-03T18:48:09.002522Z"
     },
     "code_folding": [
-     1,
      33,
      95
     ]
@@ -90,15 +89,15 @@
     "    \n",
     "    def __init__(self, input_size, n_classes=10, **kwargs):\n",
     "        super(AllConvNet, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(input_size, 96, 3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(96, 96, 3, padding=1)\n",
-    "        self.conv3 = nn.Conv2d(96, 96, 3, padding=1, stride=2)\n",
-    "        self.conv4 = nn.Conv2d(96, 192, 3, padding=1)\n",
-    "        self.conv5 = nn.Conv2d(192, 192, 3, padding=1)\n",
-    "        self.conv6 = nn.Conv2d(192, 192, 3, padding=1, stride=2)\n",
-    "        self.conv7 = nn.Conv2d(192, 192, 3, padding=1)\n",
-    "        self.conv8 = nn.Conv2d(192, 192, 1)\n",
-    "        self.class_conv = nn.Conv2d(192, n_classes, 1)\n",
+    "        self.conv1 = nn.Conv2d(input_size, 96, 3, padding=1,bias=False)\n",
+    "        self.conv2 = nn.Conv2d(96, 96, 3, padding=1,bias=False)\n",
+    "        self.conv3 = nn.Conv2d(96, 96, 3, padding=1, stride=2,bias=False)\n",
+    "        self.conv4 = nn.Conv2d(96, 192, 3, padding=1,bias=False)\n",
+    "        self.conv5 = nn.Conv2d(192, 192, 3, padding=1,bias=False)\n",
+    "        self.conv6 = nn.Conv2d(192, 192, 3, padding=1, stride=2,bias=False)\n",
+    "        self.conv7 = nn.Conv2d(192, 192, 3, padding=1,bias=False)\n",
+    "        self.conv8 = nn.Conv2d(192, 192, 1,bias=False)\n",
+    "        self.class_conv = nn.Conv2d(192, n_classes, 1,bias=False)\n",
     "\n",
     "    def forward(self, x):\n",
     "        \n",
@@ -246,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:47:40.683758Z",
-     "start_time": "2019-05-03T18:47:40.627439Z"
+     "end_time": "2019-05-03T18:48:10.456509Z",
+     "start_time": "2019-05-03T18:48:10.411431Z"
     },
     "code_folding": []
    },
@@ -262,23 +261,23 @@
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
-      "            Conv2d-1           [-1, 96, 32, 32]           2,688\n",
-      "            Conv2d-2           [-1, 96, 32, 32]          83,040\n",
-      "            Conv2d-3           [-1, 96, 16, 16]          83,040\n",
-      "            Conv2d-4          [-1, 192, 16, 16]         166,080\n",
-      "            Conv2d-5          [-1, 192, 16, 16]         331,968\n",
-      "            Conv2d-6            [-1, 192, 8, 8]         331,968\n",
-      "            Conv2d-7            [-1, 192, 8, 8]         331,968\n",
-      "            Conv2d-8            [-1, 192, 8, 8]          37,056\n",
-      "            Conv2d-9             [-1, 10, 8, 8]           1,930\n",
+      "            Conv2d-1           [-1, 96, 32, 32]           2,592\n",
+      "            Conv2d-2           [-1, 96, 32, 32]          82,944\n",
+      "            Conv2d-3           [-1, 96, 16, 16]          82,944\n",
+      "            Conv2d-4          [-1, 192, 16, 16]         165,888\n",
+      "            Conv2d-5          [-1, 192, 16, 16]         331,776\n",
+      "            Conv2d-6            [-1, 192, 8, 8]         331,776\n",
+      "            Conv2d-7            [-1, 192, 8, 8]         331,776\n",
+      "            Conv2d-8            [-1, 192, 8, 8]          36,864\n",
+      "            Conv2d-9             [-1, 10, 8, 8]           1,920\n",
       "================================================================\n",
-      "Total params: 1,369,738\n",
-      "Trainable params: 1,369,738\n",
+      "Total params: 1,368,480\n",
+      "Trainable params: 1,368,480\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.01\n",
       "Forward/backward pass size (MB): 2.72\n",
-      "Params size (MB): 5.23\n",
+      "Params size (MB): 5.22\n",
       "Estimated Total Size (MB): 7.96\n",
       "----------------------------------------------------------------\n",
       "Cuda:  True\n"
@@ -301,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-02T19:04:44.319000Z",
-     "start_time": "2019-05-02T19:04:44.300052Z"
+     "end_time": "2019-05-03T18:48:11.924067Z",
+     "start_time": "2019-05-03T18:48:11.903551Z"
     },
     "code_folding": [
      3
@@ -364,11 +363,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-02T19:04:46.273215Z",
-     "start_time": "2019-05-02T19:04:44.322989Z"
+     "start_time": "2019-05-03T18:48:16.051Z"
     }
    },
    "outputs": [
@@ -376,26 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "Dataset CIFAR10\n",
-      "    Number of datapoints: 50000\n",
-      "    Split: train\n",
-      "    Root Location: ../cifar10/data\n",
-      "    Transforms (if any): Compose(\n",
-      "                             ToTensor()\n",
-      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
-      "                         )\n",
-      "    Target Transforms (if any): None\n",
-      "Dataset CIFAR10\n",
-      "    Number of datapoints: 10000\n",
-      "    Split: test\n",
-      "    Root Location: ../cifar10/data\n",
-      "    Transforms (if any): Compose(\n",
-      "                             ToTensor()\n",
-      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
-      "                         )\n",
-      "    Target Transforms (if any): None\n"
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ../cifar10/data\\cifar-10-python.tar.gz\n"
      ]
     }
    ],
