Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -366,25 +366,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:48:16.051Z"
+     "start_time": "2019-05-03T18:48:32.577Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ../cifar10/data\\cifar-10-python.tar.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prepare the data set - here CIFAR\n",
     "normalize = transforms.Normalize(mean=[x/255.0 for x in [125.3, 123.0, 113.9]],std=[x/255.0 for x in [63.0, 62.1, 66.7]])\n",
     "transform = transforms.Compose([transforms.ToTensor(),normalize,])\n",
-    "trainset    = torchvision.datasets.CIFAR10(root='../cifar10/data', train=True,download=True, transform=transform)\n",
+    "trainset    = torchvision.datasets.CIFAR10(train=True,download=True, transform=transform)\n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size, shuffle=False, num_workers=3)\n",
-    "testset     = torchvision.datasets.CIFAR10(root='../cifar10/data', train=False, download=True, transform=transform)\n",
+    "testset     = torchvision.datasets.CIFAR10(train=False, download=True, transform=transform)\n",
     "testloader  = torch.utils.data.DataLoader(testset, batch_size=batch_size, shuffle=False, num_workers=3)\n",
     "classes     = ('plane', 'car', 'bird', 'cat','deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
     "print(trainset)\n",
