Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -441,7 +441,8 @@
       "==========================\n",
       "\tEpoch: 1\tTrain loss: 1.758\tTrain Acc: 40.53555\n",
       "\tEpoch: 1\tTest loss: 1.547\tTest Acc: 48.976875\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 2 i : 154 and loss: 1.349 acc: 0.5781255\r"
      ]
     }
    ],
@@ -538,8 +539,8 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "np.save('data.npy', np.asarray(acurracy_list_train))\n",
-    "np.save('data.npy', np.asarray(acurracy_list_test))\n",
+    "np.save('a_acurracy_list_train.npy', np.asarray(acurracy_list_train))\n",
+    "np.save('a_acurracy_list_test.npy', np.asarray(acurracy_list_test))\n",
     "np.save('data.npy', np.asarray(acurracy_list_train))\n",
     "np.save('data.npy', np.asarray(acurracy_list_train))"
    ]
