--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -443,7 +443,9 @@
       "\tEpoch: 1\tTest loss: 1.547\tTest Acc: 48.976875\n",
       "==========================\n",
       "\tEpoch: 2\tTrain loss: 1.397\tTrain Acc: 53.73425\n",
-      "Epoch: 2 i : 9 and loss: 1.296 acc: 0.6171875\r"
+      "\tEpoch: 2\tTest loss: 1.216\tTest Acc: 60.875525\n",
+      "==========================\n",
+      "Epoch: 3 i : 10 and loss: 1.042 acc: 0.687525\r"
      ]
     }
    ],
@@ -534,11 +536,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-02T19:33:41.689062Z",
-     "start_time": "2019-05-02T19:33:41.657171Z"
+     "start_time": "2019-05-03T18:51:20.738Z"
     },
     "code_folding": [
      1,
@@ -617,25 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-02T19:33:41.711202Z",
-     "start_time": "2019-05-02T19:33:41.691065Z"
+     "start_time": "2019-05-03T18:51:22.779Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "From  -1.0  to  1.0  with  9  total number of coordinate:  81\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the coordinates\n",
-    "numebr_of_points = 9 ; small_range = -1.0 ; large_range =  1.0\n",
+    "numebr_of_points = 21 ; small_range = -1.0 ; large_range =  1.0\n",
     "\n",
     "xcoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
     "ycoordinates = np.linspace(small_range, large_range, num=numebr_of_points) \n",
