--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -445,7 +445,16 @@
       "\tEpoch: 2\tTrain loss: 1.397\tTrain Acc: 53.73425\n",
       "\tEpoch: 2\tTest loss: 1.216\tTest Acc: 60.875525\n",
       "==========================\n",
-      "Epoch: 3 i : 214 and loss: 1.172 acc: 0.6171875\r"
+      "\tEpoch: 3\tTrain loss: 1.147\tTrain Acc: 62.62255\n",
+      "\tEpoch: 3\tTest loss: 1.123\tTest Acc: 63.875575\n",
+      "==========================\n",
+      "\tEpoch: 4\tTrain loss: 1.025\tTrain Acc: 66.79455\n",
+      "\tEpoch: 4\tTest loss: 1.048\tTest Acc: 66.695755\n",
+      "==========================\n",
+      "\tEpoch: 5\tTrain loss: 0.929\tTrain Acc: 70.25675\n",
+      "\tEpoch: 5\tTest loss: 1.007\tTest Acc: 67.875625\n",
+      "==========================\n",
+      "Epoch: 6 i : 109 and loss: 0.843 acc: 0.7578125\r"
      ]
     }
    ],
