Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -454,7 +454,19 @@
       "\tEpoch: 5\tTrain loss: 0.929\tTrain Acc: 70.25675\n",
       "\tEpoch: 5\tTest loss: 1.007\tTest Acc: 67.875625\n",
       "==========================\n",
-      "Epoch: 6 i : 109 and loss: 0.843 acc: 0.7578125\r"
+      "\tEpoch: 6\tTrain loss: 0.868\tTrain Acc: 72.22675\n",
+      "\tEpoch: 6\tTest loss: 0.936\tTest Acc: 70.875255\n",
+      "==========================\n",
+      "\tEpoch: 7\tTrain loss: 0.815\tTrain Acc: 73.82275\n",
+      "\tEpoch: 7\tTest loss: 0.919\tTest Acc: 71.245375\n",
+      "==========================\n",
+      "\tEpoch: 8\tTrain loss: 0.76\tTrain Acc: 75.586125\n",
+      "\tEpoch: 8\tTest loss: 0.981\tTest Acc: 69.779375\n",
+      "==========================\n",
+      "\tEpoch: 9\tTrain loss: 0.705\tTrain Acc: 77.34675\n",
+      "\tEpoch: 9\tTest loss: 1.031\tTest Acc: 67.416875\n",
+      "==========================\n",
+      "Epoch: 10 i : 59 and loss: 0.477 acc: 0.8203125\r"
      ]
     }
    ],
