Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "# load model with some batch size\n",
     "batch_size = 128 ; learning_rate = 0.0008\n",
-    "net        = AllConvNet(3).cuda()\n",
+    "net        = AllConvNet_BN(3).cuda()\n",
     "\n",
     "# load the loss \n",
     "criterion = nn.CrossEntropyLoss()\n",
