Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -7,8 +7,7 @@
      "end_time": "2019-05-03T18:43:55.458611Z",
      "start_time": "2019-05-03T18:43:42.557277Z"
     },
-    "code_folding": [],
-    "heading_collapsed": true
+    "code_folding": []
    },
    "source": [
     "# ==== Import Library ===="
@@ -16,29 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:44:00.998524Z",
-     "start_time": "2019-05-03T18:44:00.987829Z"
+     "start_time": "2019-05-03T18:56:26.379Z"
     },
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import library\n",
     "import argparse,copy,h5py, os,sys,time,socket\n",
@@ -71,11 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:48:09.041484Z",
-     "start_time": "2019-05-03T18:48:09.002522Z"
+     "start_time": "2019-05-03T18:56:27.007Z"
     },
     "code_folding": [
      33,
@@ -245,45 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:48:10.456509Z",
-     "start_time": "2019-05-03T18:48:10.411431Z"
+     "start_time": "2019-05-03T18:56:27.597Z"
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1           [-1, 96, 32, 32]           2,592\n",
-      "            Conv2d-2           [-1, 96, 32, 32]          82,944\n",
-      "            Conv2d-3           [-1, 96, 16, 16]          82,944\n",
-      "            Conv2d-4          [-1, 192, 16, 16]         165,888\n",
-      "            Conv2d-5          [-1, 192, 16, 16]         331,776\n",
-      "            Conv2d-6            [-1, 192, 8, 8]         331,776\n",
-      "            Conv2d-7            [-1, 192, 8, 8]         331,776\n",
-      "            Conv2d-8            [-1, 192, 8, 8]          36,864\n",
-      "            Conv2d-9             [-1, 10, 8, 8]           1,920\n",
-      "================================================================\n",
-      "Total params: 1,368,480\n",
-      "Trainable params: 1,368,480\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.01\n",
-      "Forward/backward pass size (MB): 2.72\n",
-      "Params size (MB): 5.22\n",
-      "Estimated Total Size (MB): 7.96\n",
-      "----------------------------------------------------------------\n",
-      "Cuda:  True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load model with some batch size\n",
     "batch_size = 128 ; learning_rate = 0.0008\n",
@@ -300,33 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:48:11.924067Z",
-     "start_time": "2019-05-03T18:48:11.903551Z"
+     "start_time": "2019-05-03T18:56:28.562Z"
     },
     "code_folding": [
      3
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 layer torch.Size([96, 3, 3, 3])\n",
-      "2 layer torch.Size([96, 96, 3, 3])\n",
-      "3 layer torch.Size([96, 96, 3, 3])\n",
-      "4 layer torch.Size([192, 96, 3, 3])\n",
-      "5 layer torch.Size([192, 192, 3, 3])\n",
-      "6 layer torch.Size([192, 192, 3, 3])\n",
-      "7 layer torch.Size([192, 192, 3, 3])\n",
-      "8 layer torch.Size([192, 192, 1, 1])\n",
-      "9 layer torch.Size([10, 192, 1, 1])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  Get the weights - after training\n",
     "def get_weights(net):            return [p.data for p in net.parameters()]\n",
@@ -363,41 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:49:26.388331Z",
-     "start_time": "2019-05-03T18:49:09.744573Z"
+     "start_time": "2019-05-03T18:56:29.284Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to .\\cifar-10-python.tar.gz\n",
-      "Files already downloaded and verified\n",
-      "Dataset CIFAR10\n",
-      "    Number of datapoints: 50000\n",
-      "    Split: train\n",
-      "    Root Location: .\n",
-      "    Transforms (if any): Compose(\n",
-      "                             ToTensor()\n",
-      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
-      "                         )\n",
-      "    Target Transforms (if any): None\n",
-      "Dataset CIFAR10\n",
-      "    Number of datapoints: 10000\n",
-      "    Split: test\n",
-      "    Root Location: .\n",
-      "    Transforms (if any): Compose(\n",
-      "                             ToTensor()\n",
-      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
-      "                         )\n",
-      "    Target Transforms (if any): None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prepare the data set - here CIFAR\n",
     "normalize = transforms.Normalize(mean=[x/255.0 for x in [125.3, 123.0, 113.9]],std=[x/255.0 for x in [63.0, 62.1, 66.7]])\n",
