Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -15,14 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:26.379Z"
+     "end_time": "2019-05-03T18:56:31.174791Z",
+     "start_time": "2019-05-03T18:56:26.383117Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# import library\n",
     "import argparse,copy,h5py, os,sys,time,socket\n",
@@ -55,10 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:27.007Z"
+     "end_time": "2019-05-03T18:56:31.218535Z",
+     "start_time": "2019-05-03T18:56:31.177225Z"
     },
     "code_folding": [
      33,
@@ -228,14 +243,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:27.597Z"
+     "end_time": "2019-05-03T18:56:34.707631Z",
+     "start_time": "2019-05-03T18:56:31.239327Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 96, 32, 32]           2,592\n",
+      "       BatchNorm2d-2           [-1, 96, 32, 32]             192\n",
+      "            Conv2d-3           [-1, 96, 32, 32]          82,944\n",
+      "       BatchNorm2d-4           [-1, 96, 32, 32]             192\n",
+      "            Conv2d-5           [-1, 96, 16, 16]          82,944\n",
+      "       BatchNorm2d-6           [-1, 96, 16, 16]             192\n",
+      "            Conv2d-7          [-1, 192, 16, 16]         165,888\n",
+      "       BatchNorm2d-8          [-1, 192, 16, 16]             384\n",
+      "            Conv2d-9          [-1, 192, 16, 16]         331,776\n",
+      "      BatchNorm2d-10          [-1, 192, 16, 16]             384\n",
+      "           Conv2d-11            [-1, 192, 8, 8]         331,776\n",
+      "      BatchNorm2d-12            [-1, 192, 8, 8]             384\n",
+      "           Conv2d-13            [-1, 192, 8, 8]         331,776\n",
+      "      BatchNorm2d-14            [-1, 192, 8, 8]             384\n",
+      "           Conv2d-15            [-1, 192, 8, 8]          36,864\n",
+      "      BatchNorm2d-16            [-1, 192, 8, 8]             384\n",
+      "           Conv2d-17             [-1, 10, 8, 8]           1,920\n",
+      "================================================================\n",
+      "Total params: 1,370,976\n",
+      "Trainable params: 1,370,976\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 5.44\n",
+      "Params size (MB): 5.23\n",
+      "Estimated Total Size (MB): 10.68\n",
+      "----------------------------------------------------------------\n",
+      "Cuda:  True\n"
+     ]
+    }
+   ],
    "source": [
     "# load model with some batch size\n",
     "batch_size = 128 ; learning_rate = 0.0008\n",
@@ -252,16 +306,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:28.562Z"
+     "end_time": "2019-05-03T18:56:34.756387Z",
+     "start_time": "2019-05-03T18:56:34.716611Z"
     },
     "code_folding": [
      3
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 layer torch.Size([96, 3, 3, 3])\n",
+      "2 layer torch.Size([96])\n",
+      "3 layer torch.Size([96])\n",
+      "4 layer torch.Size([96, 96, 3, 3])\n",
+      "5 layer torch.Size([96])\n",
+      "6 layer torch.Size([96])\n",
+      "7 layer torch.Size([96, 96, 3, 3])\n",
+      "8 layer torch.Size([96])\n",
+      "9 layer torch.Size([96])\n",
+      "10 layer torch.Size([192, 96, 3, 3])\n",
+      "11 layer torch.Size([192])\n",
+      "12 layer torch.Size([192])\n",
+      "13 layer torch.Size([192, 192, 3, 3])\n",
+      "14 layer torch.Size([192])\n",
+      "15 layer torch.Size([192])\n",
+      "16 layer torch.Size([192, 192, 3, 3])\n",
+      "17 layer torch.Size([192])\n",
+      "18 layer torch.Size([192])\n",
+      "19 layer torch.Size([192, 192, 3, 3])\n",
+      "20 layer torch.Size([192])\n",
+      "21 layer torch.Size([192])\n",
+      "22 layer torch.Size([192, 192, 1, 1])\n",
+      "23 layer torch.Size([192])\n",
+      "24 layer torch.Size([192])\n",
+      "25 layer torch.Size([10, 192, 1, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "#  Get the weights - after training\n",
     "def get_weights(net):            return [p.data for p in net.parameters()]\n",
@@ -298,13 +385,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:29.284Z"
+     "end_time": "2019-05-03T18:56:37.963484Z",
+     "start_time": "2019-05-03T18:56:35.820172Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Dataset CIFAR10\n",
+      "    Number of datapoints: 50000\n",
+      "    Split: train\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None\n",
+      "Dataset CIFAR10\n",
+      "    Number of datapoints: 10000\n",
+      "    Split: test\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None\n"
+     ]
+    }
+   ],
    "source": [
     "# prepare the data set - here CIFAR\n",
     "normalize = transforms.Normalize(mean=[x/255.0 for x in [125.3, 123.0, 113.9]],std=[x/255.0 for x in [63.0, 62.1, 66.7]])\n",
