--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -69,15 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:18.016074Z",
-     "start_time": "2019-05-03T18:56:17.968545Z"
+     "end_time": "2019-05-03T18:56:39.002193Z",
+     "start_time": "2019-05-03T18:56:38.952568Z"
     },
     "code_folding": [
-     33,
-     95
+     33
     ]
    },
    "outputs": [],
@@ -180,7 +179,7 @@
     "class AllConvNet_LocalRN(nn.Module):\n",
     "    \n",
     "    def __init__(self, input_size, n_classes=10, **kwargs):\n",
-    "        super(AllConvNet_BN, self).__init__()\n",
+    "        super(AllConvNet_LocalRN, self).__init__()\n",
     "        \n",
     "        self.conv1 = nn.Conv2d(input_size,96, 3, padding=1,bias=False)\n",
     "        self.bn1   = nn.LocalResponseNorm(96)\n",
@@ -243,25 +242,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:18.442793Z",
-     "start_time": "2019-05-03T18:56:18.037086Z"
+     "end_time": "2019-05-03T18:56:44.222212Z",
+     "start_time": "2019-05-03T18:56:39.505460Z"
     },
     "code_folding": []
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "super(type, obj): obj must be an instance or subtype of type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-a91d1f8374c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# load model with some batch size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m128\u001b[0m \u001b[1;33m;\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.0008\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnet\u001b[0m        \u001b[1;33m=\u001b[0m \u001b[0mAllConvNet_LocalRN\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# load the loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-790ed98bb6b3>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, input_size, n_classes, **kwargs)\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 99\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAllConvNet_BN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconv1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mConv2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m96\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbias\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: super(type, obj): obj must be an instance or subtype of type"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 96, 32, 32]           2,592\n",
+      " LocalResponseNorm-2           [-1, 96, 32, 32]               0\n",
+      "            Conv2d-3           [-1, 96, 32, 32]          82,944\n",
+      " LocalResponseNorm-4           [-1, 96, 32, 32]               0\n",
+      "            Conv2d-5           [-1, 96, 16, 16]          82,944\n",
+      " LocalResponseNorm-6           [-1, 96, 16, 16]               0\n",
+      "            Conv2d-7          [-1, 192, 16, 16]         165,888\n",
+      " LocalResponseNorm-8          [-1, 192, 16, 16]               0\n",
+      "            Conv2d-9          [-1, 192, 16, 16]         331,776\n",
+      "LocalResponseNorm-10          [-1, 192, 16, 16]               0\n",
+      "           Conv2d-11            [-1, 192, 8, 8]         331,776\n",
+      "LocalResponseNorm-12            [-1, 192, 8, 8]               0\n",
+      "           Conv2d-13            [-1, 192, 8, 8]         331,776\n",
+      "LocalResponseNorm-14            [-1, 192, 8, 8]               0\n",
+      "           Conv2d-15            [-1, 192, 8, 8]          36,864\n",
+      "LocalResponseNorm-16            [-1, 192, 8, 8]               0\n",
+      "           Conv2d-17             [-1, 10, 8, 8]           1,920\n",
+      "================================================================\n",
+      "Total params: 1,368,480\n",
+      "Trainable params: 1,368,480\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 5.44\n",
+      "Params size (MB): 5.22\n",
+      "Estimated Total Size (MB): 10.67\n",
+      "----------------------------------------------------------------\n",
+      "Cuda:  True\n"
      ]
     }
    ],
@@ -281,17 +305,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:18.447100Z",
-     "start_time": "2019-05-03T18:56:15.383Z"
+     "end_time": "2019-05-03T18:56:44.254680Z",
+     "start_time": "2019-05-03T18:56:44.232185Z"
     },
     "code_folding": [
      3
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 layer torch.Size([96, 3, 3, 3])\n",
+      "2 layer torch.Size([96, 96, 3, 3])\n",
+      "3 layer torch.Size([96, 96, 3, 3])\n",
+      "4 layer torch.Size([192, 96, 3, 3])\n",
+      "5 layer torch.Size([192, 192, 3, 3])\n",
+      "6 layer torch.Size([192, 192, 3, 3])\n",
+      "7 layer torch.Size([192, 192, 3, 3])\n",
+      "8 layer torch.Size([192, 192, 1, 1])\n",
+      "9 layer torch.Size([10, 192, 1, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "#  Get the weights - after training\n",
     "def get_weights(net):            return [p.data for p in net.parameters()]\n",
@@ -331,11 +371,18 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T18:56:18.450166Z",
-     "start_time": "2019-05-03T18:56:16.996Z"
+     "start_time": "2019-05-03T18:56:41.168Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "# prepare the data set - here CIFAR\n",
     "normalize = transforms.Normalize(mean=[x/255.0 for x in [125.3, 123.0, 113.9]],std=[x/255.0 for x in [63.0, 62.1, 66.7]])\n",
