Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -368,10 +368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T18:56:41.168Z"
+     "end_time": "2019-05-03T18:56:47.357980Z",
+     "start_time": "2019-05-03T18:56:45.018588Z"
     }
    },
    "outputs": [
@@ -379,7 +380,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n"
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Dataset CIFAR10\n",
+      "    Number of datapoints: 50000\n",
+      "    Split: train\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None\n",
+      "Dataset CIFAR10\n",
+      "    Number of datapoints: 10000\n",
+      "    Split: test\n",
+      "    Root Location: .\n",
+      "    Transforms (if any): Compose(\n",
+      "                             ToTensor()\n",
+      "                             Normalize(mean=[0.4913725490196078, 0.4823529411764706, 0.4466666666666667], std=[0.24705882352941178, 0.24352941176470588, 0.2615686274509804])\n",
+      "                         )\n",
+      "    Target Transforms (if any): None\n"
      ]
     }
    ],
