--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -466,7 +466,18 @@
       "\tEpoch: 9\tTrain loss: 0.705\tTrain Acc: 77.34675\n",
       "\tEpoch: 9\tTest loss: 1.031\tTest Acc: 67.416875\n",
       "==========================\n",
-      "Epoch: 10 i : 59 and loss: 0.477 acc: 0.8203125\r"
+      "\tEpoch: 10\tTrain loss: 0.663\tTrain Acc: 78.75275\n",
+      "\tEpoch: 10\tTest loss: 0.926\tTest Acc: 71.649375\n",
+      "==========================\n",
+      "\tEpoch: 11\tTrain loss: 0.628\tTrain Acc: 79.71755\n",
+      "\tEpoch: 11\tTest loss: 1.005\tTest Acc: 70.585125\n",
+      "==========================\n",
+      "\tEpoch: 12\tTrain loss: 0.596\tTrain Acc: 80.75875\n",
+      "\tEpoch: 12\tTest loss: 1.041\tTest Acc: 70.655125\n",
+      "==========================\n",
+      "\tEpoch: 13\tTrain loss: 0.56\tTrain Acc: 81.808625\n",
+      "\tEpoch: 13\tTest loss: 1.149\tTest Acc: 70.475875\n",
+      "==========================\n"
      ]
     }
    ],
