Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -554,10 +554,10 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "np.save('a_acurracy_list_train.npy', np.asarray(acurracy_list_train))\n",
-    "np.save('a_acurracy_list_test.npy', np.asarray(acurracy_list_test))\n",
-    "np.save('a_loss_list_train.npy', np.asarray(loss_list_train))\n",
-    "np.save('a_loss_list_test.npy', np.asarray(loss_list_test))"
+    "np.save('c_acurracy_list_train.npy', np.asarray(acurracy_list_train))\n",
+    "np.save('c_acurracy_list_test.npy', np.asarray(acurracy_list_test))\n",
+    "np.save('c_loss_list_train.npy', np.asarray(loss_list_train))\n",
+    "np.save('c_loss_list_test.npy', np.asarray(loss_list_test))"
    ]
   },
   {
