Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -436,7 +436,15 @@
     ],
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0 i : 24 and loss: 2.3 acc: 0.093755755\r"
+     ]
+    }
+   ],
    "source": [
     "# train the network\n",
     "num_epoch   = 100\n",
