Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -429,7 +429,7 @@
      6,
      34
     ],
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -477,7 +477,11 @@
       "==========================\n",
       "\tEpoch: 13\tTrain loss: 0.56\tTrain Acc: 81.808625\n",
       "\tEpoch: 13\tTest loss: 1.149\tTest Acc: 70.475875\n",
-      "==========================\n"
+      "==========================\n",
+      "\tEpoch: 14\tTrain loss: 0.535\tTrain Acc: 82.53655\n",
+      "\tEpoch: 14\tTest loss: 1.143\tTest Acc: 69.985875\n",
+      "==========================\n",
+      "Epoch: 15 i : 269 and loss: 0.643 acc: 0.8046875\r"
      ]
     }
    ],
