Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -459,7 +459,9 @@
      "output_type": "stream",
      "text": [
       "\tEpoch: 0\tTrain loss: 2.034\tTrain Acc: 23.17475\n",
-      "Epoch: 0 i : 49 and loss: 1.816 acc: 0.3046875\r"
+      "\tEpoch: 0\tTest loss: 1.738\tTest Acc: 33.517555\n",
+      "==========================\n",
+      "Epoch: 1 i : 68 and loss: 1.636 acc: 0.3753125\r"
      ]
     }
    ],
