Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -481,7 +481,10 @@
       "\tEpoch: 14\tTrain loss: 0.535\tTrain Acc: 82.53655\n",
       "\tEpoch: 14\tTest loss: 1.143\tTest Acc: 69.985875\n",
       "==========================\n",
-      "Epoch: 15 i : 384 and loss: 0.386 acc: 0.8759375\r"
+      "\tEpoch: 15\tTrain loss: 0.507\tTrain Acc: 83.37455\n",
+      "\tEpoch: 15\tTest loss: 1.126\tTest Acc: 69.746255\n",
+      "==========================\n",
+      "Epoch: 16 i : 330 and loss: 0.585 acc: 0.8203125\r"
      ]
     }
    ],
