Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -461,7 +461,10 @@
       "\tEpoch: 0\tTrain loss: 2.034\tTrain Acc: 23.17475\n",
       "\tEpoch: 0\tTest loss: 1.738\tTest Acc: 33.517555\n",
       "==========================\n",
-      "Epoch: 1 i : 364 and loss: 1.655 acc: 0.3359375\r"
+      "\tEpoch: 1\tTrain loss: 1.547\tTrain Acc: 41.79875\n",
+      "\tEpoch: 1\tTest loss: 1.389\tTest Acc: 48.575525\n",
+      "==========================\n",
+      "Epoch: 2 i : 19 and loss: 1.362 acc: 0.4687555\r"
      ]
     }
    ],
