Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -441,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0 i : 368 and loss: 1.638 acc: 0.3515625\r"
+      "\tEpoch: 0\tTrain loss: 1.977\tTrain Acc: 24.50875\n"
      ]
     }
    ],
