Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -441,7 +441,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tEpoch: 0\tTrain loss: 1.977\tTrain Acc: 24.50875\n"
+      "\tEpoch: 0\tTrain loss: 1.977\tTrain Acc: 24.50875\n",
+      "Epoch: 0 i : 48 and loss: 1.724 acc: 0.3437575\r"
      ]
     }
    ],
