Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -484,7 +484,10 @@
       "\tEpoch: 15\tTrain loss: 0.507\tTrain Acc: 83.37455\n",
       "\tEpoch: 15\tTest loss: 1.126\tTest Acc: 69.746255\n",
       "==========================\n",
-      "Epoch: 16 i : 330 and loss: 0.585 acc: 0.8203125\r"
+      "\tEpoch: 16\tTrain loss: 0.489\tTrain Acc: 83.72455\n",
+      "\tEpoch: 16\tTest loss: 1.154\tTest Acc: 69.456875\n",
+      "==========================\n",
+      "\tEpoch: 17\tTrain loss: 0.464\tTrain Acc: 84.47375\n"
      ]
     }
    ],
