Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -442,7 +442,9 @@
      "output_type": "stream",
      "text": [
       "\tEpoch: 0\tTrain loss: 1.977\tTrain Acc: 24.50875\n",
-      "Epoch: 0 i : 48 and loss: 1.724 acc: 0.3437575\r"
+      "\tEpoch: 0\tTest loss: 1.652\tTest Acc: 37.715255\n",
+      "==========================\n",
+      "Epoch: 1 i : 2 and loss: 1.505 acc: 0.4609375\r"
      ]
     }
    ],
