Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -464,7 +464,8 @@
       "\tEpoch: 1\tTrain loss: 1.547\tTrain Acc: 41.79875\n",
       "\tEpoch: 1\tTest loss: 1.389\tTest Acc: 48.575525\n",
       "==========================\n",
-      "Epoch: 2 i : 227 and loss: 1.251 acc: 0.5468755\r"
+      "\tEpoch: 2\tTrain loss: 1.29\tTrain Acc: 52.115125\n",
+      "Epoch: 2 i : 14 and loss: 1.146 acc: 0.5546875\r"
      ]
     }
    ],
