--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -465,7 +465,9 @@
       "\tEpoch: 1\tTest loss: 1.389\tTest Acc: 48.575525\n",
       "==========================\n",
       "\tEpoch: 2\tTrain loss: 1.29\tTrain Acc: 52.115125\n",
-      "Epoch: 2 i : 14 and loss: 1.146 acc: 0.5546875\r"
+      "\tEpoch: 2\tTest loss: 1.2\tTest Acc: 56.26875255\n",
+      "==========================\n",
+      "Epoch: 3 i : 56 and loss: 1.277 acc: 0.4765625\r"
      ]
     }
    ],
